# stupopuma

./: .gitignore  README.md
backend/: .env  Cargo.toml
backend/src/: main.rs  models.rs
frontend/: package.json
frontend/src/: App.tsx
frontend/src/app/: loginSchema.ts
frontend/src/components/: ElementCourse.tsx  FormInput.tsx
frontend/src/context/: index.ts
frontend/src/i18n/: en.json  ru.json
frontend/src/pages/: Signin.page.tsx  Signup.page.tsx  UserProfile.page.tsx
frontend/src/pages/tabs/: AllCourses.tsx  GeneralInfo.tsx  ListStudens.tsx  Requests.tsx  UserCourses.tsx
