[package]
name = "Diplom"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "macros", "postgres"] }
bcrypt = "0.11"
actix-rt = "2"
dotenv = "0.15"
actix-multipart = "0.4"
futures = "0.3"
sha2 = "0.9"
uuid = { version = "1.8", features = ["v4"] }



# [dependencies]
# actix-rt = "2.5.0"
# actix-web = "4.0.1"
# bcrypt = "0.10.1"
# dotenv = "0.15.0"
# futures = "0.3.18"
# serde = { version = "1.0.130", features = ["derive"] }
# serde_json = "1.0.64"
# sqlx = { version = "0.5", features = ["runtime-actix-rustls", "macros", "postgres"] }
# uuid = { version = "0.8.2", features = ["v4"] }
# sha2 = "0.9.8"
# actix-multipart = "0.4.0"
# sanitize-filename = "0.3.0"
# tokio = { version = "1.8.0", features = ["full"] }
